--- a/index.html
+++ b/index.html
@@ -32,56 +32,23 @@
 
     <section id="heroes">
       <div class="container">
-        <div class="hero-image">
-          <img src="img/fitness-men.png" alt="AI Exercise App" />
-        </div>
-        <div class="hero-description">
-          <h2>
-            Consigue un cuerpo saludable con nuestra app de fitness inteligente
-          </h2>
-          <p>
-            Alcanzar tus objetivos de fitness nunca ha sido tan fácil. Nuestra
-            aplicación ofrece planes de entrenamiento y dieta personalizados,
-            adaptados a tus necesidades y preferencias. Despídete de las
-            costosas cuotas de gimnasio y da la bienvenida a una vida más
-            saludable.
-          </p>
-          <br />
-          <p>
-            ¿Te interesa nuestra aplicación?<br />
-            Por favor, no dudes en anotarte para obtener novedades de nuestra
-            app.
-          </p>
-          <div class="buttons-container">
-            <a
-              href="https://forms.gle/AgoaHgWzna6rAvUk8"
-              class="btn"
-              target="_blank"
-              >¡Quiero anotarme!</a
-            >
-            <a
-              href="https://www.facebook.com/profile.php?id=100092522590830"
-              class="social-btn"
-              target="_blank"
-            >
-              <img src="img/facebook.png" alt="Facebook" />
-            </a>
-            <a
-              href="https://www.instagram.com/fitnessmind.ia/"
-              class="social-btn"
-              target="_blank"
-            >
-              <img src="img/instagram.png" alt="Instagram" />
-            </a>
-            <a
-              href="https://twitter.com/fitnessmind_ia"
-              class="social-btn"
-              target="_blank"
-            >
-              <img src="img/twitter.png" alt="Twitter" />
-            </a>
+        <section class="heroes-carousel">
+          <div class="carousel-container">
+            <div class="carousel-slide">
+              <img src="img/Screenshot_31.png">
+              <img src="img/Screenshot_32.png">
+              <img src="img/Screenshot_33.png">
+              <img src="img/Screenshot_34.png">
+              <img src="img/Screenshot_35.png">
+              <img src="img/Screenshot_36.png">
+              <img src="img/Crs (1).jpeg">
+              <img src="img/Crs (2).jpeg">
+              <img src="img/Crs (3).jpeg">
+            </div>
           </div>
-        </div>
+          <a class="carousel-prev">&#10094;</a>
+          <a class="carousel-next">&#10095;</a>
+        </section>
       </div>
     </section>
     <section id="contacto">
@@ -110,6 +77,6 @@
       <p>&copy; 2023 FitnessMind. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/email.js"></script>
+    <script src="js/carrue.js"></script>
   </body>
 </html>
