--- a/contenido.html
+++ b/contenido.html
@@ -4,13 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contenido</title>
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <title>Contenido</title>
-    <link rel="stylesheet" href="css/prueba.css" />
 </head>
 <body>
-    
+    <header>
         
+        <div class="logo-container">
+          <img src="img/logo.jpeg" alt="logo" />
+          <h1>Corvus Films</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="">Nosotros</a></li>
+            <li><a href="contenido.html">Contenido</a></li>
+            <li><a href="">Contactos</a></li>
+          </ul>
+        </nav>
+      </header>
+      <!---->    
+      <section id = "video-carrusel">
+
+        <div class="home-demo">
+            <h3></h3>
+            <div class="owl-carousel owl-theme">
+              <div class="item">
+                <iframe src="https://drive.google.com/file/d/1yjQZ8tcPhesh12KLtvl4GnladQIuKN3q/preview" width="640" height="480" allow="autoplay"></iframe>
+              </div>
+              <div class="item">
+                <img src="img/Crs (2).png">
+              </div>
+              <div class="item">
+                <img src="img/Crs (3).jpeg">
+              </div>
+              <div class="item">
+                <img src="img/Crs (4).png">
+              </div>
+              <div class="item">
+                <img src="img/Crs (5).png">
+              </div>
+              <div class="item">
+                <img src="img/Crs (6).png">
+              </div>
+              <div class="item">
+                <img src="img/Crs (3).png">
+              </div>
+              <div class="item">
+                <img src="img/Crs (1).png">
+              </div>
+              <div class="item">
+                <img src="img/Crs (2).jpeg">
+              </div>
+            </div>
+          </div>
+
+      </section> 
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="js/carrue.js"></script>
 </body>
 </html>
